<resources>
    <string name="app_name" translatable="false">In And Out</string>
    <string name="instruction_text">Place an Order</string>
    <string name="double_double_text">Double Double $3.60</string>
    <string name="cheeseburger_text">Cheeseburger $2.15</string>
    <string name="french_fries_text">French Fries $1.65</string>
    <string name="shakes_text">Shakes $2.20</string>
    <string name="drinks_size_text">Fountain Drinks (pick size)</string>
    <string name="small_drink_text">Small $1.45</string>
    <string name="medium_drink_text">Medium $1.55</string>
    <string name="large_drink_text">Large $1.75</string>
    <string name="place_order_text">PLACE ORDER</string>
    <string name="order_total_text">Order Total $</string>
    <string name="items_ordered_text">Items Ordered: </string>
    <string name="subtotal_text">Subtotal: $</string>
    <string name="tax_text">Tax (8%): $</string>
    <string name="new_order_text">START NEW ORDER</string>
</resources>
