<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.vnguyen629.inandout.SummaryActivity"
    android:background="@drawable/summary_background"
    android:useDefaultMargins="true"
    android:layout_gravity="left">

    <TextView
        android:text="@string/order_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="93dp"
        android:id="@+id/orderTotalTextView"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="left|right"
        android:layout_columnSpan="2" />

    <TextView
        android:text="@string/items_ordered_text"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="93dp"
        android:id="@+id/itemsOrderedTextView"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_columnSpan="2" />

    <TextView
        android:text="@string/subtotal_text"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:id="@+id/subtotalTextView"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_columnSpan="2"
        android:paddingLeft="20dp" />

    <TextView
        android:text="@string/tax_text"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:id="@+id/taxTextView"
        android:layout_gravity="left"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="3"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:paddingLeft="20dp" />

    <Button
        android:text="@string/new_order_text"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:id="@+id/newOrderButton"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:textSize="20dp" />

</GridLayout>
